--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🇺🇦 \1-Project!</h1>
+  <h1>1-Project!</h1>
   <p>Це мій перший GitHub-проєкт</p>
 </body>
 </html>
